--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "~5.6",
+        "pulkitjalan/google-apiclient": "^3.1",
         "unisharp/laravel-ckeditor": "~4.7"
     },
     "require-dev": {
